<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/buttontxtcol">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_margin="8dp"
        android:padding="30dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="#2E2B2B"
            android:textSize="28sp"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="286dp"
            android:layout_height="57dp"
            android:layout_below="@+id/textView"
            android:layout_alignTop="@+id/name"
            android:autofillHints="no"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/enter_full_name"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            tools:ignore="NotSibling"/>

        <EditText
            android:id="@+id/phonenumber"
            android:layout_width="286dp"
            android:layout_height="57dp"
            android:layout_below="@+id/spinner"
            android:ems="10"
            android:hint="@string/phone"
            android:importantForAutofill="no"
            android:inputType="phone" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/terms"
            android:background="@color/button"
            android:layout_marginTop="18dp"
            android:text="@string/registration"
            android:textColor="@color/buttontxtcol" />

        <Button
            android:id="@+id/generateotp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2E434C"
            android:layout_marginTop="12dp"
            android:textColor="@color/buttontxtcol"
            android:text="@string/generate_otp"
            android:layout_below="@+id/phonenumber" />

        <EditText
            android:id="@+id/otp"
            android:layout_width="286dp"
            android:layout_height="57dp"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/generateotp"
            android:hint="@string/otp"
            android:importantForAutofill="no"
            android:inputType="phone" />

        <EditText
            android:id="@+id/password"
            android:layout_width="286dp"
            android:layout_height="57dp"
            android:hint="@string/passinput"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/otp"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/DOB"
            android:layout_width="286dp"
            android:layout_height="57dp"
            android:hint="@string/DOB"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/password"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/email"
            android:layout_width="286dp"
            android:layout_height="57dp"
            android:hint="@string/email"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/name"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="286dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_below="@+id/email"
            android:contentDescription="@string/sex"
            android:spinnerMode="dropdown"
            android:text="@string/sex" />

        <CheckBox
            android:id="@+id/terms"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:layout_marginTop="25dp"
            android:layout_below="@id/DOB"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="286dp"
            android:layout_height="286dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/btnRegister"
            android:contentDescription="@string/profileimage" />

        <Button
            android:id="@+id/btnselect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_marginTop="12dp"
            android:text="@string/selectimg"/>

        <Button
            android:id="@+id/btnupload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnselect"
            android:text="@string/uploadimg"/>
    </RelativeLayout>
</ScrollView>